--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "128": "/icons/128.png"
     },
     "action": {
-        "default_popup": "html/popupOptions.html",
+        "default_popup": "html/options.html",
         "default_icon": {
             "16": "/icons/16.png",
             "48": "/icons/48.png",
