--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,15 @@
         "page": "html/options.html",
         "open_in_tab": true
     },
+
+	"browser_specific_settings": {
+	  "gecko": {
+		"id": "@magisterpp",
+		  "data_collection_permissions": {
+			"required": [ "none" ]
+		  }
+	  }
+	},
     "icons": {
         "16": "/icons/16.png",
         "48": "/icons/48.png",
@@ -27,6 +36,7 @@
                 "*://*.magister.net/*"
             ],
             "js": [
+				"js/browser-polyfill.js",
                 "js/util.js",
                 "js/api.js",
                 "js/main.js",
@@ -49,6 +59,7 @@
                 "css/error.css"
             ],
             "js": [
+				"js/browser-polyfill.js",
                 "js/error.js",
 				"js/customTheme.js",
 				"js/theme.js"
@@ -63,6 +74,7 @@
                 "css/account.css"
             ],
             "js": [
+				"js/browser-polyfill.js",
                 "js/account.js",
 				"js/customTheme.js",
 				"js/theme.js"
@@ -77,6 +89,7 @@
                 "css/berichten.css"
             ],
             "js": [
+				"js/browser-polyfill.js",
 				"js/customTheme.js",
 				"js/theme.js"
             ],
@@ -99,6 +112,7 @@
 				"css/keuzerooster.css"
 			],
             "js": [
+				"js/browser-polyfill.js",
                 "js/theme.js"
             ],
             "all_frames": true
@@ -117,6 +131,8 @@
         "*://*.magister.net/*"
     ],
     "background": {
-        "service_worker": "js/service_worker.js"
+        "scripts": [
+			"js/service_worker.js"
+		]
     }
 }
